--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
   - 1.8
 
 install:
-   - go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover
+   - go get github.com/stretchr/testify/require github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover
    - go get ./...
 
 script:
